--- a/c.html
+++ b/c.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--Start Title-->
     <title>BELAJAR CODING</title>
-
     <meta type="description" content="Halaman ini berisi lahitan Structur HTML">
 
     <!--End Title-->
@@ -15,11 +14,6 @@
     <!--Start CSS-->
 
     <link rel="stylesheet" href="styles/style.css">
-    <!--End CSS-->
-
-    <!--Start CSS-->
-
-    <script src="js/function.js"></script>
     <!--End CSS-->
 </head>
 
@@ -37,93 +31,37 @@
     <div class="container bg-brown menu-primer">
         <ul>
             <li>
-                <a href="index.html" title="Beranda" class="active">  Beranda  </a>
+                <a href="index.html" title="Beranda">  Beranda  </a>
             </li>
             <li>
-                <a href="c++.html" title="c++">  C++  </a>
+                <a href="C++.html" title="C++">  C++  </a>
             </li>
             <li>
-                <a href="java.html" title="JAVA">  JAVA  </a>
+                <a href="JAVA.html" title="JAVA">  JAVA  </a>
             </li>
             <li>
-                <a href="html.html" title="HTML">  HTML  </a>
+                <a href="HTML.html" title="HTML">  HTML  </a>
             </li>
             <li>
-                <a href="pyhton.html" title="PYTHON">  PYTHON </a>
+                <a href="PYHTON.html" title="PYTHON">  PYTHON </a>
             </li>
             <li>
-                <a href="php.html" title="PHP">  PHP  </a>
+                <a href="PHP.html" title="PHP">  PHP  </a>
             </li>
             <li>
-                <a href="javascrp.html" title="JAVA SCRIPT">   JAVA SCRIPT  </a>
+                <a href="JAVASCRP.html" title="JAVA SCRIPT">   JAVA SCRIPT  </a>
             </li>
             <li>
-                <a href="c.html" title="C#"> C# </a>
-            </li>
-            <li>
-                <a href="layanan.html" title="layanan"> LAYANAN </a>
+                <a href="c.html" title="C#" class="active">   C#  </a>
             </li>
 
         </ul>
     </div>
     <!--End Menu-->
 
-    <div class="container">
-        <figure class="snip1545">
-            <img src="image/Javalogo.jpg" alt="sample42" />
-            <figcaption>
-                <div><i class="ion-ios-home-outline"></i></div>
-            </figcaption>
-            <a href="java.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/cpplogo.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="c++.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/download.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="html.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/php.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="php.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/Jvscrp.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="javascrp.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/python.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="pyhton.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/c.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="c.html"></a>
-        </figure>
-    </div>
-
     <!--start Jumbotron-->
     <div class="container Jumbotron">
         <h1>Selamat datang di Belajar Coding </h1>
-        <p></p>
 
     </div>
     <!--End Jumbotron-->
@@ -141,8 +79,8 @@
             <div class="menu-sekunder-one">
                 <h4> Belajar Coding</h4>
 
-                <P> Email: <a href="mailto:arissugiantoro73@gmail.com" title="arissugiantoro73@gmail.com">arissugiantoro73@gmail.com</a></P>
-                <P> WA: <a href="tel:085648259815" title="085648259815">085648259815</a></P>
+                <P> Email: <a href="mailto:uamir348@gmail.com" title="uamir348@gmail.com">uamir348@gmail.com</a></P>
+                <P> WA: <a href="tel:0853-3534-7303" title="0853-3534-7303">0853-3534-7303</a></P>
             </div>
 
             <div class="menu-sekunder-two">
@@ -152,25 +90,22 @@
                         <a href="index.html" title="Beranda">Beranda</a>
                     </li>
                     <li>
-                        <a href="c++.html" title="C++">C++</a>
+                        <a href="C++.html" title="C++">C++</a>
                     </li>
                     <li>
-                        <a href="java.html" title="JAVA">JAVA</a>
+                        <a href="JAVA.html" title="JAVA">JAVA</a>
                     </li>
                     <li>
-                        <a href="html.html" title="HTML">HTML</a>
+                        <a href="HTML.html" title="HTML">HTML</a>
                     </li>
                     <li>
-                        <a href="pyhton.html" title="PYTHON">PYTHON</a>
+                        <a href="PYHTON.html" title="PYTHON">PYTHON</a>
                     </li>
                     <li>
                         <a href="PHP.html" title="PHP">PHP</a>
                     </li>
                     <li>
-                        <a href="javascrp.html" title="JAVA SCRIPT">JAVA SCRIPT</a>
-                    </li>
-                    <li>
-                        <a href="c.html" title="C#"> C#</a>
+                        <a href="JAVASCRP.html" title="JAVA SCRIPT">JAVA SCRIPT</a>
                     </li>
 
                 </ul>
