--- a/layanan.html
+++ b/layanan.html
@@ -37,7 +37,7 @@
     <div class="container bg-brown menu-primer">
         <ul>
             <li>
-                <a href="index.html" title="Beranda" class="active">  Beranda  </a>
+                <a href="index.html" title="Beranda" >  Beranda  </a>
             </li>
             <li>
                 <a href="c++.html" title="c++">  C++  </a>
@@ -61,7 +61,7 @@
                 <a href="c.html" title="C#"> C# </a>
             </li>
             <li>
-                <a href="layanan.html" title="layanan"> LAYANAN </a>
+                <a href="layanan.html" title="layanan" class="active" > LAYANAN </a>
             </li>
 
         </ul>
@@ -172,6 +172,10 @@
                     <li>
                         <a href="c.html" title="C#"> C#</a>
                     </li>
+                    <li>
+                        <a href="layanan.html" title="layanan"> LAYANAN</a>
+                    </li>
+
 
                 </ul>
             </div>
