--- a/pyhton.html
+++ b/pyhton.html
@@ -37,7 +37,7 @@
     <div class="container bg-brown menu-primer">
         <ul>
             <li>
-                <a href="index.html" title="Beranda" class="active">  Beranda  </a>
+                <a href="index.html" title="Beranda">  Beranda  </a>
             </li>
             <li>
                 <a href="c++.html" title="c++">  C++  </a>
@@ -49,7 +49,7 @@
                 <a href="html.html" title="HTML">  HTML  </a>
             </li>
             <li>
-                <a href="pyhton.html" title="PYTHON">  PYTHON </a>
+                <a href="pyhton.html" title="PYTHON" class="active">  PYTHON </a>
             </li>
             <li>
                 <a href="php.html" title="PHP">  PHP  </a>
@@ -59,9 +59,6 @@
             </li>
             <li>
                 <a href="c.html" title="C#"> C# </a>
-            </li>
-            <li>
-                <a href="layanan.html" title="layanan"> LAYANAN </a>
             </li>
 
         </ul>
