--- a/c++.html
+++ b/c++.html
@@ -37,10 +37,10 @@
     <div class="container bg-brown menu-primer">
         <ul>
             <li>
-                <a href="index.html" title="Beranda" class="active">  Beranda  </a>
+                <a href="index.html" title="Beranda">  Beranda  </a>
             </li>
             <li>
-                <a href="c++.html" title="c++">  C++  </a>
+                <a href="c++.html" title="c++" class="active">  C++  </a>
             </li>
             <li>
                 <a href="java.html" title="JAVA">  JAVA  </a>
@@ -59,9 +59,6 @@
             </li>
             <li>
                 <a href="c.html" title="C#"> C# </a>
-            </li>
-            <li>
-                <a href="layanan.html" title="layanan"> LAYANAN </a>
             </li>
 
         </ul>
