--- a/php.html
+++ b/php.html
@@ -37,7 +37,7 @@
     <div class="container bg-brown menu-primer">
         <ul>
             <li>
-                <a href="index.html" title="Beranda" class="active">  Beranda  </a>
+                <a href="index.html" title="Beranda">  Beranda  </a>
             </li>
             <li>
                 <a href="c++.html" title="c++">  C++  </a>
@@ -52,16 +52,13 @@
                 <a href="pyhton.html" title="PYTHON">  PYTHON </a>
             </li>
             <li>
-                <a href="php.html" title="PHP">  PHP  </a>
+                <a href="php.html" title="PHP" class="active">  PHP  </a>
             </li>
             <li>
                 <a href="javascrp.html" title="JAVA SCRIPT">   JAVA SCRIPT  </a>
             </li>
             <li>
                 <a href="c.html" title="C#"> C# </a>
-            </li>
-            <li>
-                <a href="layanan.html" title="layanan"> LAYANAN </a>
             </li>
 
         </ul>
