--- a/c++.html
+++ b/c++.html
@@ -14,7 +14,7 @@
 
     <!--Start CSS-->
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--End CSS-->
 
     <!--Start CSS-->
@@ -59,6 +59,9 @@
             </li>
             <li>
                 <a href="c.html" title="C#"> C# </a>
+            </li>
+            <li>
+                <a href="layanan.html" title="layanan"> LAYANAN </a>
             </li>
 
         </ul>
@@ -168,6 +171,9 @@
                     </li>
                     <li>
                         <a href="c.html" title="C#"> C#</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="layanan"> LAYANAN</a>
                     </li>
 
                 </ul>
