--- a/layanan.html
+++ b/layanan.html
@@ -14,7 +14,7 @@
 
     <!--Start CSS-->
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--End CSS-->
 
     <!--Start CSS-->
@@ -171,6 +171,9 @@
                     </li>
                     <li>
                         <a href="c.html" title="C#"> C#</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="layanan"> LAYANAN</a>
                     </li>
                     <li>
                         <a href="layanan.html" title="layanan"> LAYANAN</a>
