--- a/pyhton.html
+++ b/pyhton.html
@@ -14,7 +14,7 @@
 
     <!--Start CSS-->
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--End CSS-->
 
     <!--Start CSS-->
@@ -168,6 +168,12 @@
                     </li>
                     <li>
                         <a href="c.html" title="C#"> C#</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="layanan"> LAYANAN</a>
+                    </li>
+                    <li>
+                        <a href="layanan.html" title="layanan"> LAYANAN </a>
                     </li>
 
                 </ul>
