--- a/index.html
+++ b/index.html
@@ -122,9 +122,35 @@
 
     <!--start Jumbotron-->
     <div class="container Jumbotron">
-        <h1>Selamat datang di Belajar Coding </h1>
         <p></p>
-
+        <h1>Sudahkah Anda belajar coding hari ini? </h1>
+            
+            <p>Hmm, coding merupakan bahasan menarik dewasa ini.
+            <br>
+            <br>
+            Coding adalah tentang menerjemahkan logika ke dalam bahasa pemrograman komputer. Sementara itu, coder adalah sebutan untuk seseorang yang melakukan coding, juga biasa disebut dengan programmer.
+            <br>
+            <br>
+            Dua istilah di atas tentu sudah tidak asing bagi mahasiswa atau seorang profesional yang menekuni bidang IT. Di luar bidang IT, rasanya istilah tersebut masih kurang familiar.
+            <br>
+            <br>
+            Meskipun demikian, disadari atau tidak, tren belajar coding semakin meningkat dari tahun ke tahun. Masifnya perkembangan teknologi ditengarahi menjadi penyebab meningkatnya tren ini. Bagaimana tidak, teknologi kini semakin mengintegrasikan beragam aspek dan membuat kehidupan jauh lebih mudah.</p>
+            <br>
+        <h1>Coding untuk web development</h1>
+        <br>
+        <p>Anda pasti sudah mengetahui bahwa web development erat kaitannya dengan coding. Web development adalah suatu kegitan pengembangan sebuah website atau aplikasi sebagian besar pengerjaannya melibatkan coding. Web development dilakukan secara konsiten untuk terus mengembangkan sebuah aplikasi atau website.</p>
+        <br>
+        <p>Web development memiliki dua bagian:</p>
+        <li>Yang pertama adalah web development itu sendiri. Pada web development, pengembangan berfokus pada teknis          sebuah website.  Pengembangan ini biasanya disebut back end development.
+        </li>
+        <li>
+            Yang kedua adalah web design. Pada bagian ini developer fokus pada pengembangan tampilan (UI/UX) sebuah aplikasi/website. Pengembangan yang dilakukan mulai dari warna, teta letak navigasi, design website/aplikasi dan lain sebagainya. Pengembangan dari sisi visual ini biasa disebut front end development.
+        </li>
+        <br>
+        <p>Dalam dunia web development bukan sebuah hal yang mustahil apabila seorang developer dapat mengerjakan kedua bagian web development. Selain menangani aspek teknis, dia juga menentukan aspek visual sebuah pengembangan website atau aplikasi. Seseorang yang dapat melakukan back end dan front end disebut dengan full stack development.</p>
+        <br>
+        <h1>Apa keuntungan belajar coding?</h1>
+        <p>Siapa tak kenal Facebook? Atau, siapa belum pernah menggunakan aplikasi ride-sharing seperti Uber dan Go-Jek? Aplikasi tersebut tidak akan bisa terwujud tanpa programmer.</p>
     </div>
     <!--End Jumbotron-->
 
@@ -184,18 +210,18 @@
                 <ul>
                     <li>
                         <a href="https://facebook.com/" title="Facebook Belajar Coding ">
-                            <img src="image/logofb.JPG" alt="logo facebook" width="50"> Facebook Belajar Coding
+                            <img src="image/logofb.JPG" alt="logo facebook" width="50"> Facebook Tutorial Koding
 
                         </a>
                     </li>
                     <li>
                         <a href="https://instagram.com/" title="Instagram Belajar Coding ">
-                            <img src="image/logoig.JPG" alt="logo instagram" width="50"> Instagram Belajar Coding
+                            <img src="image/ig.jpg" alt="logo instagram" width="50"> Instagram Tutorial Koding
                         </a>
                     </li>
                     <li>
                         <a href="https://whatsapps.com/" title="whatsapps Belajar Coding ">
-                            <img src="image/logowa.jpg" alt="logo whatsapps" width="50"> whatsapps Belajar Coding
+                            <img src="image/wa.jpg" alt="logo whatsapps" width="50"> whatsapps Tutorial Koding
                         </a>
                     </li>
                 </ul>
