--- a/java.html
+++ b/java.html
@@ -247,18 +247,18 @@
                 <ul>
                     <li>
                         <a href="https://facebook.com/" title="Facebook Belajar Coding ">
-                            <img src="image/logofb.JPG" alt="logo facebook" width="50"> Facebook Belajar Coding
+                            <img src="image/logofb.JPG" alt="logo facebook" width="50"> Facebook Tutorial Koding
 
                         </a>
                     </li>
                     <li>
                         <a href="https://instagram.com/" title="Instagram Belajar Coding ">
-                            <img src="image/logoig.JPG" alt="logo instagram" width="50"> Instagram Belajar Coding
+                            <img src="image/ig.jpg" alt="logo instagram" width="50"> Instagram Tutorial Koding
                         </a>
                     </li>
                     <li>
                         <a href="https://whatsapps.com/" title="whatsapps Belajar Coding ">
-                            <img src="image/logowa.jpg" alt="logo whatsapps" width="50"> whatsapps Belajar Coding
+                            <img src="image/wa.jpg" alt="logo whatsapps" width="50"> whatsapps Tutorial Koding
                         </a>
                     </li>
                 </ul>
