--- a/c.html
+++ b/c.html
@@ -61,8 +61,26 @@
 
     <!--start Jumbotron-->
     <div class="container Jumbotron">
-        <h1>Selamat datang di Belajar Coding </h1>
-
+        <h1> Pengertian C </h1>
+        <img src="image/cc.jpg" alt="sample45" width="50%" height="50%" />
+        <p align=" justifity ">
+            <br> Apa itu C# ? C# atau yang dibaca C sharp adalah bahasa pemrograman sederhana yang digunakan untuk tujuan umum, dalam artian bahasa pemrograman ini dapat digunakan untuk berbagai fungsi misalnya untuk pemrograman server-side pada website, membangun aplikasi desktop ataupun mobile, pemrograman game dan sebagainya. Selain itu C# juga bahasa pemrograman yang berorientasi objek, jadi C# juga mengusung konsep objek seperti inheritance, class, polymorphism dan encapsulation.
+            <br> Dalam prakteknya C# sangat bergantung dengan framework yang disebut .NET Framework, framework inilah yang nanti digunakan untuk mengcompile dan menjalankan kode C#. C# dikembangkan oleh Microsoft dengan merekrut Anders Helsberg. Tujuan dibangunnya C# adalah sebagai bahasa pemrograman utama dalam lingkungan .NET Framework (lihat C#). Banyak pihak juga yang menganggap bahwa Java dengan C# saling bersaing, bahkan ada juga yang menyatakan jika pernah belajar Java maka belajar C# akan sangat mudah dan begitu juga sebaliknya. Anggapan tersebut sebenarnya tidak salah karena perlu diketahui sebelum adanya C# Microsoft mengembangkan J++ dengan maksud mencoba membuat Java agar berjalan pada platform Windows, karena adanya masalah dari pihak luar maka Microsoft menghentikan proyek J++ dan beralih untuk mengembangkan bahasa baru yaitu C#.
+            <br> IDE untuk C Dalam mengembangkan aplikasi ataupun fungsi-fungsi lain yang berbasis C#, kita perlu IDE (Integrated Development Environment) untuk membantu pekerjaan kita. Di Windows kita dapat menggunakan Visual Studio yang memiliki fitur yang sangat lengkap. Akan tetapi tidak semua dari kita memakai OS (Operating System) Windows dan memiliki kapasitas harddisk yang memadai karena perlu diketahui Visual Studio ini sangat memakan tempat di harddisk kita. Karena itu ada IDE alternatif Visual Studio yaitu Xamarin Studio yang bisa dipakai lintas platform yang fiturnya menurut saya tidak kalah hebatnya dengan Visual Studio dan lebih dari cukup untuk membangun aplikasi C#. Selain itu ada juga tool seperti SharpDevelop namun sepertinya hanya bisa untuk platform Windows. Oh iya bagi pembaca yang memakai OS selain windows dapat memakai Mono untuk pengganti .NET Framework.
+            <br> Sebenarnya penulis sendiri lebih suka menggunakan Sharp Develop karena mengingat spesifikasi laptop yang memiliki processor Atom dan dipersenjatai harddisk sebesar 18 GB, selain itu juga Sharp Develop juga mudah digunakan oleh pemula seperti saya. Jadi kesimpulannya untuk platform Windows kamu bisa memilih dari ketiga itu atau mau semuanya juga terserah, akan tetapi untuk OS Mac OS X dan Linux kamu hanya dapat memakai Xamarin Studio.
+            <br> Struktur Program atau Kode pada C Dalam pemrograman C# (mungkin juga berlaku untuk beberapa pemrograman lainnya) memiliki 5 struktur dasar yang harus diingat yaitu,
+            <br> 1.Resource atau library
+            <br> Struktur pertama ini merupakan pendefinisian library apa yang harus ada pada program kita atau library apa yang kita impor.
+            <br> 2.Namespace
+            <br> Struktur kedua ini adalah nama dari project kita.
+            <br> 3.Nama Class
+            <br> Struktur ketiga ini berbicara tentang apa nama dari Class yang kita buat dan bisa juga langsung diberi penanda seperti Main Class yang menandakan bahwa Class tersebut Class utama.
+            <br> 4.Deklarasi Method
+            <br> Struktur keempat ini merupakan pendeklarasian method sebagai awalan untuk menjalankan method atau perintah yang ada di dalamnya, jika didefinisikan dengan "Main" maka method tersebut yang dijalankan pertama kali oleh compiler.
+            <br> 5.Method atau Command
+            <br> Struktur kelima adalah method atau perintah yang kita berikan untuk di eksekusi oleh compiler.
+            <br> Agar lebih jelas dalam memahami saya berikan contoh kode simplenya yaitu seperti biasa "Program Hello World", untuk membuatnya silahkan buka IDE masing-masing yaitu VS, Xamarin, atau SharpDevelop, setelah itu teman-teman klik "File " dibagian menu bar dan pilih "New ", bisa "New File ", "New Project " atau "New Solution ", Jika New File bisa pilih "empty class " atau "class ", lalu untuk "New Project " atau "New Solution " untuk pembelajaran bisa pilih "Create Console Application ".
+            <br> Tapi itu semua juga tergantung masing-masing software, untuk SharpDevelop memang semua itu ada, Tapi untuk Xamarin hanya ada "New File " dan "New Solution ", dan juga pada "New File " hanya ada "empty class ", dan juga jangan lupa pada projectnya diarahkan pada C# karena bisa jadi IDE tidak otomatis ke C# tapi bisa ke F# dan lain sebagainya, berikut adalah link contoh gambar secara singkat yang bisa di klik (SharpDevelop dan Xamarin). Untuk VS jujur saja saya tidak menginstallnya tapi dokumentasinya dapat kamu temukan di sini. Kemudian buat kode program seperti dibawah ini (jangan di copy-paste), tapi ingat namespace dan nama class disesuaikan dengan nama yang kamu buat.</p>
     </div>
     <!--End Jumbotron-->
 
