--- a/java.html
+++ b/java.html
@@ -70,66 +70,19 @@
 
     <div class="container">
         <figure class="snip1545">
-            <img src="image/Javalogo.jpg" alt="sample42" />
+            <img src="image/jj.jpg" alt="sample42" />
             <figcaption>
                 <div><i class="ion-ios-home-outline"></i></div>
             </figcaption>
             <a href="java.html"></a>
         </figure>
 
-        <figure class="snip1545"><img src="image/cpplogo.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="c++.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/download.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="html.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/php.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="php.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/Jvscrp.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="javascrp.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/python.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="pyhton.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/c.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="c.html"></a>
-        </figure>
     </div>
 
     <!--start Jumbotron-->
     <div class="container Jumbotron">
-        <h1>Selamat datang di Belajar Coding </h1>
+        <h1> Java </h1>
         <p></p>
-        <figure class="snip1545"><img src="image/java.jpg" alt="sample45" width="400" height="100" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href=""></a>
-        </figure>
 
         <p align="justify">Java sebagai salah satu bahasa pemrograman yang sudah berumur dari era 1990-an, kian berkembang dan melebarkan dominasinya di berbagai bidang. Salah satu penggunaan terbesar Java adalah dalam pembuatan aplikasi native untuk Android. Selain itu Java pun menjadi pondasi bagi berbagai bahasa pemrograman seperti Kotlin, Scala, Clojure, Groovy, JRuby, Jython, dan lainnya yang memanfaatkan Java Virtual Machine sebagai rumahnya. Java pun akrab dengan dunia saintifik dan akademik. Cukup banyak akademisi di Indonesia yang menggunakan Java sebagai alat bantu untuk menyelesaikan skripsi atau tugas akhir dengan berbagai topik yang didominasi kecerdasan buatan, data mining, enterprise architecture, aplikasi mobile, dan lainnya. Di dunia web development sendiri, Java memiliki berbagai web framework unggulan seperti Spring, Play Framework, Spark, Jakarta Struts, dan Java Server Pages.</p>
 
@@ -143,51 +96,24 @@
         <h1>Mengenal tipe data dasar di Java</h1>
         <p align="justify">Berurusan dengan tipe data untuk variabel, Java memiliki sangat banyak tipe data yang dasar dan kompleks. Tipe data yang kompleks dapat Anda temukan seperti ArrayList, HashMap, HashTable, Vector, Array, dan lainnya. Untuk tipe data dasar, Anda dapat menggunakan int, float, double, String, Boolean, dan lainya. Untuk membuat sebuah array dari tipe data dasar, Anda dapat menggunakan tanda "[]" setelah mengetik tipe data yang Akan Anda gunakan.</p>
         <p>Sekarang mari kita buat sebuah file dengan nama HelloVariabel.java dan buat kode berikut di dalam file tersebut:</p>
-        <p> public class HelloVariable {
-
-            public static void main(String[] args) {
-                <br>
-                int umur = 10;
-                <br>
-                double gravitasi = 9.8;
-                <br>
-                String nama = "Peter Parker";
-                <br>
-                Boolean bukan_dosen = false;
-                <br>
-                String[] superhero = new String[]{"Ant Man", "Captain America", "Spiderman", "Hulk", "Thor", "Iron Man"};
-                <br>
-                System.out.println("umur: " + umur);
-                <br>
-                System.out.println("gravitasi: " + gravitasi);
-                <br>
-                System.out.println(nama instanceof String);
-                <br>
-                System.out.println("nama: " + nama);
-                <br>
-                System.out.println(superhero instanceof String[]);
-                <br>
-                System.out.println("superhero 1: " + superhero[0]);
-                <br>
-                System.out.println("superhero 2: " + superhero[1]);
-                <br>
-                System.out.println("superhero 3: " + superhero[2]);
-                <br>
-                System.out.println("superhero 4: " + superhero[3]);
-                <br>
-                System.out.println("superhero 5: " + superhero[4]);
-                <br>
-                System.out.println("superhero 6: " + superhero[5]);
-            }
-        
-        } </p>
-        <p align="justify">Ada beberapa hal yang perlu Anda telisik terlebih dahulu. Jangan sampai bagian ini terlewat yah:
-
-            Untuk mendeklarasikan sebuah variabel, Anda harus menulis terlebih dahulu tipe data variabelnya, kemudian nama variabel, dan wajib menginisialisasi variabel agar tidak error
-            Untuk membuat sebuah array Anda dapat menggunakan tanda "[]" setelah mengetik tipe data, kemudian nama variabel dan Anda harus memanggil keyword new untuk membuat sebuah array
-            Untuk menyambung string Anda dapat menggunakan tanda "+" untuk menyambung string dengan isi variabel
-            Anda dapat menggunakan keyword instanceof untuk menyelidiki tipe data dari variabel
-            Untuk mengakses array Anda dapat langsung mengakses indeksnya dengan angka yang dimulai dari 0</p>
+        <p> public class HelloVariable { public static void main(String[] args) {
+            <br> int umur = 10;
+            <br> double gravitasi = 9.8;
+            <br> String nama = "Peter Parker";
+            <br> Boolean bukan_dosen = false;
+            <br> String[] superhero = new String[]{"Ant Man", "Captain America", "Spiderman", "Hulk", "Thor", "Iron Man"};
+            <br> System.out.println("umur: " + umur);
+            <br> System.out.println("gravitasi: " + gravitasi);
+            <br> System.out.println(nama instanceof String);
+            <br> System.out.println("nama: " + nama);
+            <br> System.out.println(superhero instanceof String[]);
+            <br> System.out.println("superhero 1: " + superhero[0]);
+            <br> System.out.println("superhero 2: " + superhero[1]);
+            <br> System.out.println("superhero 3: " + superhero[2]);
+            <br> System.out.println("superhero 4: " + superhero[3]);
+            <br> System.out.println("superhero 5: " + superhero[4]);
+            <br> System.out.println("superhero 6: " + superhero[5]); } } </p>
+        <p align="justify">Ada beberapa hal yang perlu Anda telisik terlebih dahulu. Jangan sampai bagian ini terlewat yah: Untuk mendeklarasikan sebuah variabel, Anda harus menulis terlebih dahulu tipe data variabelnya, kemudian nama variabel, dan wajib menginisialisasi variabel agar tidak error Untuk membuat sebuah array Anda dapat menggunakan tanda "[]" setelah mengetik tipe data, kemudian nama variabel dan Anda harus memanggil keyword new untuk membuat sebuah array Untuk menyambung string Anda dapat menggunakan tanda "+" untuk menyambung string dengan isi variabel Anda dapat menggunakan keyword instanceof untuk menyelidiki tipe data dari variabel Untuk mengakses array Anda dapat langsung mengakses indeksnya dengan angka yang dimulai dari 0</p>
     </div>
     <!--End Jumbotron-->
 
