--- a/php.html
+++ b/php.html
@@ -69,27 +69,6 @@
     <!--End Menu-->
 
     <div class="container">
-        <figure class="snip1545">
-            <img src="image/Javalogo.jpg" alt="sample42" />
-            <figcaption>
-                <div><i class="ion-ios-home-outline"></i></div>
-            </figcaption>
-            <a href="java.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/cpplogo.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="c++.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/download.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="html.html"></a>
-        </figure>
 
         <figure class="snip1545"><img src="image/php.png" alt="sample45" />
             <figcaption>
@@ -98,32 +77,21 @@
             <a href="php.html"></a>
         </figure>
 
-        <figure class="snip1545"><img src="image/Jvscrp.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="javascrp.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/python.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="pyhton.html"></a>
-        </figure>
-
-        <figure class="snip1545"><img src="image/c.png" alt="sample45" />
-            <figcaption>
-                <div><i class="ion-ios-location-outline"></i></div>
-            </figcaption>
-            <a href="c.html"></a>
-        </figure>
     </div>
 
     <!--start Jumbotron-->
     <div class="container Jumbotron">
-        <h1>Selamat datang di Belajar Coding </h1>
-        <p></p>
+            <img src="image/php.jpg" alt="logo whatsapps" width="500" height="300">
+        <h1> PHP </h1>
+        <p>PHP & CSS Agar Anda lebih mengenai bahasa pemrograman PHP dan CSS, kita akan membahas terlebih dahulu apa itu PHP dan apa fungsi PHP di dalam proses pengembangan website. Selain itu, pembahasan mengenai CSS dan fungsinya juga akan kami ulas di artikel ini.
+            <br> Apa Pengertian PHP dan Fungsinya? PHP adalah bahasa pemrograman yang sering disisipkan ke dalam HTML. PHP sendiri berasal dari kata Hypertext Preprocessor. Sejarah PHP pada awalnya merupakan kependekan dari Personal Home Page (Situs personal). PHP pertama kali dibuat oleh Rasmus Lerdorf pada tahun 1995. Pada waktu itu PHP masih bernama Form Interpreted (FI), yang wujudnya berupa sekumpulan skrip yang digunakan untuk mengolah data formulir dari web.
+            <br> Bahasa pemrograman ini menggunakan sistem server-side. Server-side programming adalah jenis bahasa pemrograman yang nantinya script/program tersebut akan dijalankan/diproses oleh server. Kelebihannya adalah mudah digunakan, sederhana, dan mudah untuk dimengerti dan dipelajari.
+            <br> Semenjak PHP menjadi bahasa pemrograman yang open source, pengembang tidak perlu menunggu sampai dengan update terbaru rilis.
+            <br> Pengguna PHP akan lebih baik jika menggunakan versi terbaru. Sehingga jika ada rilis terbaru Anda harus menyesuaikan sistem Anda dengan versi PHP yang paling baru. Meskipun harus menggunakan versi terbaru, biaya untuk maintenance dan web development sangat terjangkau.
+            <br> Bahasa pemrograman PHP membantu Anda untuk mengembangkan aplikasi berbasis web yang cukup kompleks, handal, dan cepat. Tergantung dari spesifikasi bisnis, penggunaan hosting, tingkat pengalaman, kebutuhan aplikasi, dan pengembangan timeframe. Selain itu ada banyak PHP frameworks yang dapat Anda pilih.
+
+            <br>
+        </p>
 
     </div>
     <!--End Jumbotron-->
